--- a/config/manager/controller_manager_config.yaml
+++ b/config/manager/controller_manager_config.yaml
@@ -1,5 +1,5 @@
-apiVersion: controller-runtime.sigs.k8s.io/v1alpha1
-kind: ControllerManagerConfig
+apiVersion: config.tutorial.kubebuilder.io/v2
+kind: ProjectConfig
 health:
   healthProbeBindAddress: :8081
 metrics:
@@ -9,3 +9,4 @@ webhook:
 leaderElection:
   leaderElect: true
   resourceName: 80807133.tutorial.kubebuilder.io
+clusterName: example-test
